changed jupyter to python script

--- a/config.yaml
+++ b/config.yaml
@@ -2,5 +2,4 @@ run_metadata:
   default_input_namespace: David
   default_output_namespace: David
   description: Test_run_imagescript
-  script: jupyter nbconvert --to html --execute Image_and_Script/simple_analysis.ipynb
-
+  script: python3 Image_and_Script/simple_analysis.py
