--- a/config.yaml
+++ b/config.yaml
@@ -2,4 +2,4 @@ run_metadata:
   default_input_namespace: ryancorbyn
   default_output_namespace: ryancorbyn
   description: Run Image analysis script
-  script: jjupyter nbconvert --to html --execute Image_and_Script/simple_analysis.ipynb
+  script: jupyter nbconvert --to html --execute Image_and_Script/simple_analysis.ipynb
