--- a/Image_and_Script/image/image/config.yaml
+++ b/Image_and_Script/image/image/config.yaml
@@ -6,15 +6,21 @@ run_metadata:
   remote_repo: https://github.com/pharmlovex/FairDataPipepline
 
 register:
-- namespace: pharmlovex
-  full_name: Ifedayo Ojo
+- namespace: GlasgowUniversity
+  full_name: Ifedayo
   website: https://github.com/pharmlovex
 
-
-read:
-- data_product: image/data
+- external_object: image/data
+  namespace_name: GlasgowUniversity
+  root: file:///home/jovyan/work/FairDataPipepline/
   path: Image_and_Script/image/image/single_frame_image.tif
- 
+  title: Single Frame Image
+  description: Image Analysis
+  identifier: https://doi.org/10.1038/s41592-020-0856-2
+  file_type: tif
+  release_date: 2021-09-20T12:00
+  version: "1.0.0"
+  primary: "false"
 
 write:
 - data_product: image/results/image_analysis
