--- a/Image_and_Script/python/config.yaml
+++ b/Image_and_Script/python/config.yaml
@@ -2,7 +2,7 @@ run_metadata:
   default_input_namespace: David
   default_output_namespace: David
   description: Test_run_imagescript
-  script: python3 simple_analysis.py
+  script: python3 Image_and_Script/python/simple_analysis.py
   remote_repo: https://github.com/pharmlovex/FairDataPipepline
 
 register:
@@ -13,7 +13,7 @@ register:
 - external_object: image1
   namespace_name: David
   root: file:///home/jovyan/work/FairDataPipepline/
-  path: single_frame_image.tif
+  path: Image_and_Script/python/single_frame_image.tif
   title: Static image
   description: Static image for analyse
   identifier: https://doi.org/10.1038/s41592-020-0856-2
