modified the jupyter notebook and config file

--- a/Image_and_Script/Jupyter/config.yaml
+++ b/Image_and_Script/Jupyter/config.yaml
@@ -2,7 +2,7 @@ run_metadata:
   default_input_namespace: David
   default_output_namespace: David
   description: Test_run_imagescript
-  script: python3 Image_and_Script/simple_analysis.py
+  script: jupyter nbconvert --to html --execute Image_and_Script/Jupyter/simple_analysis.ipynb
   remote_repo: https://github.com/pharmlovex/FairDataPipepline
 
 register:
@@ -10,23 +10,23 @@ register:
   full_name: David McGuinness
   website: https://github.com/dhmcg77
 
-- external_object: python_basic/image
+- external_object: jupyter_image
   namespace_name: David
-  root: file:///home/jovyan/work/FairDataPipepline/
-  path: Image_and_Script/single_frame_image.tif
+  root: https://github.com/pharmlovex/FairDataPipepline/blob/David/
+  path: Image_and_Script/Jupyter/single_frame_image.tif
   title: Static image
   description: Static image for analyse
   identifier: https://doi.org/10.1038/s41592-020-0856-2
   file_type: tif
   release_date: 2024-06-13T12:00
-  version: "1.2.0"
+  version: "1.1.0"
   primary: "false"
   
 write:
-- data_product: python_basic/results/analysis
+- data_product: jupyter_analysis
   description: Excel data
   file_type: csv
 
-- data_product: python_basic/results/figure
+- data_product: jupyter_figure
   description: plot
   file_type: tif
